# jovialengine

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  usage.txt
.github/workflows/: publish.yml  release.yml  test.yml
src/jovialengine/: __init__.py  animsprite.py  cameragroup.py  config.py  constants.py  display.py  engineconstants.py  fontwrap.py  game.py  gamebuilder.py  gameinput.py  gamesprite.py  input.py  inputframe.py  load.py  modebase.py  modegamemenu.py  offsetgroup.py  save.py  saveable.py  shared.py  singleton.py  utility.py
tests/: constants.py  requirements.txt  state.py  test_display.py  test_game.py  test_gameinput.py  test_gamesprite.py  test_input.py  test_load.py  test_modebase.py  test_save.py  test_utility.py  utility_test.py
tests/assets/txt/: maskcircle31.txt  maskcircle32.txt
tests/mode/: __init__.py  modetest.py
tests/saves/: a.sav  not_a_save.txt
