[metadata]
name = jovialengine
version = 0.1.1
author = Brett Kaplan
author_email = BrettCKaplan@gmail.com
description = A Simple Pygame Engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JovialKnoll/jovialengine
project_urls =
    Bug Tracker = https://github.com/JovialKnoll/jovialengine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
