[metadata]
name = jovialengine
version = VERSION_REPLACE
author = Brett Kaplan
author_email = BrettCKaplan@gmail.com
description = A Simple Pygame-ce Engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JovialKnoll/jovialengine
project_urls =
    Source = https://github.com/JovialKnoll/jovialengine
    Issue Tracker = https://github.com/JovialKnoll/jovialengine/issues
license = MIT
license_files =
    LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src
